[tool.poetry]
name = "temp_map"
version = "0.1.0"
description = "A package following Stone & Shen (2023) for AGN accretion disk temperature fluctuation maps"
authors = ["Zstone19 <stone28@illinois.edu>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8, <3.12"
astropy = "^5.2.2"
numpy = "<1.24"
numba = "^0.56.4"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
numba-progress = "^0.0.4"
awkward = "^2.1.3"
scikit-image = "<=0.20.0"
mkl = "^2023.1.0"
sparse-dot-mkl = "^0.8.3"
pypardiso = "^0.4.2"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
